objects/DMAPP__DM_Milestone_Section_Quicklink__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Category__c</fullName>
        <label>Category</label>
        <referenceTo>DMAPP__DM_Milestone_Section__c</referenceTo>
        <relationshipLabel>Milestone Section Quicklinks</relationshipLabel>
        <relationshipName>Milestone_Section_Quicklinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Quicklink</label>
        <referenceTo>DMAPP__DM_Quicklink__c</referenceTo>
        <relationshipLabel>Milestone Section Quicklinks</relationshipLabel>
        <relationshipName>Milestone_Section_Quicklinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Milestone Section Quicklink</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Section Quicklink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Section Quicklinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>